--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -40,6 +40,8 @@
     "formik": "^2.0.8",
     "i18next": "^17.2.0",
     "i18next-xhr-backend": "^3.2.0",
+    "intro.js": "^2.9.3",
+    "intro.js-react": "^0.2.0",
     "localforage": "^1.7.3",
     "mobx": "^5.14.0",
     "mobx-logger": "^0.7.1",
