--- a/ExilenceNextApp/package.json
+++ b/ExilenceNextApp/package.json
@@ -101,8 +101,9 @@
     "@typescript-eslint/parser": "^2.3.0",
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
-    "electron": "^7.1.11",
     "electron-builder": "^22.3.2",
+    "electron-context-menu": "^2.3.0",
+    "electron-devtools-installer": "^3.1.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.13.0",
